# SpecGate

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml  ghcr.yml  pages.yml
docs/: AI4SE_Lab_9_12_Alignment.md  DEPLOYMENT.md  FINAL_EVIDENCE_MATRIX.md  FINAL_SUBMISSION_CHECKLIST.md  PROJECT_WALKTHROUGH.md  REFLECTION_FACT_CHECK.md
examples/knowledge_nav/: CHECKLIST.md  README.md  TASK_SPEC.md  index.html  specgate.toml
hooks/: pre-commit.sample
site/: index.html
skills/specgate-static-html-harness/: SKILL.md
src/specgate/: actions.py  approvals.py  benchmark.py  checklist_rules.py  cli.py  config.py  context.py  context_lifecycle.py  context_selector.py  credential_store.py  (+36 more)
tests/: test_actions.py  test_approvals.py  test_benchmark.py  test_checklist_rules.py  test_cli.py  test_config.py  test_context.py  test_context_lifecycle.py  test_context_selector.py  test_context_strategy.py  test_credential_store.py  test_credentials.py  test_eval_runner.py  test_final_evidence.py  test_gate.py  test_hook_sample.py  test_imports.py  test_isolation.py  test_llm.py  test_llm_config.py  test_llm_transport.py  test_memory.py  test_metrics.py  test_policy.py  test_report.py  test_retrieval.py  test_run_storage.py  test_runner.py  test_runtime_config.py  test_security_eval.py  test_snapshot.py  test_tool_registry.py  test_tools.py  test_user_config.py  test_web_app.py  test_web_approvals.py  test_web_auth.py  test_web_credentials.py  test_web_db.py  test_web_debug.py  (+8 more)
(+148 files in other folders)
