[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specgate"
version = "0.1.0"
description = "A small coding agent harness for static HTML generation and gate feedback."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
specgate = "specgate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
