[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specgate"
version = "0.1.1"
description = "A small coding agent harness for static HTML generation and gate feedback."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44,<47",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "keyring>=25,<26",
    "python-multipart>=0.0.9,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
specgate = "specgate.cli:main"
specgate-web = "specgate.web:main"

[tool.setuptools.packages.find]
where = ["src"]
